to add more deleted by mistake

--- a/计算机科学速成课笔记.md
+++ b/计算机科学速成课笔记.md
@@ -32,3 +32,11 @@
    * 热电子发射: 其中一个电极可以加热, 从而发射电子
    * 二极管: 电流只能单向流动的电子部件
    * 在1906年, 美国发明家 李·德富雷斯特在弗莱明设计的两个电极之间, 加入了第三个"控制"电极, 向"控制"电极施加正电荷, 它会允许电子流动, 负电荷就阻止电子流动
+   * 1941年, 阿兰·图灵在英国的"布莱切利园"做了台机电装置, 叫"Bombe", 用于破解纳粹"英格码"通讯加密设备
+   * 第一个大规模使用真空管的计算机是"巨人1号", 由工程师Tommy Flowers设计, 完工于1943年12月, 在英国的"布莱切利园", 用于破解纳粹通信, 被认为是第一个可编程的电子计算机
+   * 电子数值积分计算机"ENIAC", 1946在"宾夕法尼亚大学"完成建造, 由John Mauchly和J.Presper Eckert设计, 是世上第一个真正的通用可编程的电子计算机, 每秒可执行5000次十位数加减法
+   * 美国空军的AN/FSQ-7计算机于1955年完成, 是"SAGE"防空计算机系统的一部分
+   * 1947年, 贝尔实验室Jhon Bardeen, Walter Brattain, William Shockley发明了晶体管
+   * 1957年发布的IBM 608是第一个完全用晶体管而且消费者也可以买到的计算机, 有3000个晶体管, 每秒执行4500次加法, 每秒能执行80次左右的乘除法
+   * 很多晶体管和半导体的开发在加州位于旧金山和圣荷西之间的"圣克拉拉谷", 而生产半导体最常见的材料是硅, 所以这个地区被称为"硅谷"
+   * William Shockle搬过去创立了"肖克利半导体", 里面的员工后来成立了"仙童半导体", 这里面的员工后来创立了当今世界上最大的计算机芯片制造商英特尔
